--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Swipe Slides</title>
 	<link rel="stylesheet" href="index.css">
-	<link rel="stylesheet" href="/gallery-lib/gallery.css">
-	<link rel="stylesheet" href="/gallery-lib/gallery.js">
+	<link rel="stylesheet" href="gallery-lib/gallery.css">
+	<script src="gallery-lib/gallery.js"></script>
 </head>
 <body>
+	<div id="gallery">
+		<div class="slide slide-1">111111111</div>
+		<div class="slide slide-2">222222222222</div>
+		<div class="slide slide-3">33333333</div>
+		<div class="slide slide-4">4444</div>
+	</div>
 	
-	<script src="index.js></script>
+	<script src="index.js"></script>
 </body>
 </html>
