--- a/index.html
+++ b/index.html
@@ -11,10 +11,21 @@
 </head>
 <body>
 	<div id="gallery">
-		<div class="slide slide-1">111111111</div>
-		<div class="slide slide-2">222222222222</div>
-		<div class="slide slide-3">33333333</div>
-		<div class="slide slide-4">4444</div>
+		<div class="slide">
+			<img src="./images/1.jpg" alt="Roocks"/>
+		</div>
+		<div class="slide">
+			<img src="./images/2.jpg" alt="Roocks"/>
+		</div>
+		<div class="slide">
+			<img src="./images/3.jpg" alt="Roocks"/>
+		</div>
+		<div class="slide">
+			<img src="./images/4.jpg" alt="Roocks"/>
+		</div>
+		<div class="slide">
+			<img src="./images/5.jpg" alt="Roocks"/>
+		</div>
 	</div>
 	
 	<script src="index.js"></script>
